--- a/index.html
+++ b/index.html
@@ -98,10 +98,6 @@
 					<div class="shootingstar"></div>
 					<div class="shootingstar"></div>
 				</div>
-                <div class="firebubble-wrapper">
-					<img src="images/firebubble.png" alt="" class="firebubble" style="opacity: 0;">
-				</div>
-				<div class="missilefire"></div>
                 <div class="stars">
                     <div class="star"></div>
                     <div class="star"></div>
@@ -124,12 +120,19 @@
                 <div class="artboard rocket-fire-artboard">
                     <div class="takeoff"></div>
                     <div class="smoke"></div>
+					<div class="firebubble-wrapper">
+						<img src="images/firebubble.png" alt="" class="firebubble">
+					</div>
+					<div class="missilefire"></div>
                     <img src="images/rocket.png" id="portfolio-rocket" alt=""/>
                 </div>
                 
                 <div class="rocket-wrapper aos-init" data-aos="fade-right" data-aos-duration="2500">
                     <div class="artboard rocket-artboard">
                         <div class="fire"></div>
+						<div class="firebubble-wrapper">
+							<img src="images/firebubble.png" alt="" class="firebubble">
+						</div>
                         <img src="images/rocket.png" id="rocket-rocket" alt="">
                     </div>
                 </div>
@@ -1266,8 +1269,8 @@
 									<h3 style="color:white;">Instagram</h3>
 								</div>
 							</div>
-							<div class="abduction">
-								<svg class="alien-abduction" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 915 913">
+							<div class="abduction">								
+								<svg class="alien-abduction" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 915 1213">
 									<defs>
 										<linearGradient id="gradientOne" x1="456.36" x2="456.36" y1="416.65" y2="861.47" gradientUnits="userSpaceOnUse">
 											<stop offset="0" stop-color="#fff"/>
@@ -1281,12 +1284,12 @@
 											<stop offset="1"   stop-color="#ffffff" stop-opacity="0"/>
 										</linearGradient>
 									</defs>
-									<g class="bg">
+									<g class="bg" transform="matrix(1,0,0,1.328454,0,-1.4194786)">
 										<path fill="#1c144e" d="M913.37 914.16V.79H0v913.37"/>
 										<path fill="url(#gradientOne)" d="M 893.75,106.99999 a 81,81 0 0 0 -21.15,2.83 C 864.82,51.339987 823.91,6.7299873 774.6,6.7299873 h -2.44 c -49.32,0 -90.23,44.6099997 -98,103.1000027 a 81,81 0 0 0 -21.16,-2.83 c -36.38,0 -68.17,24.27 -85.48,60.47 a 25.37,25.37 0 0 0 -2,-2.86 c -8,-10 -21.1,-10 -29.15,0 a 26.53,26.53 0 0 0 -4.55,8.54 c -12.24,-10.93 -27.24,-17.4 -43.47,-17.4 a 61,61 0 0 0 -20.47,3.57 28.42,28.42 0 0 0 -6,-15.76 2.62,2.62 0 0 0 -4.22,0 28.48,28.48 0 0 0 -5.94,15.76 61,61 0 0 0 -20.47,-3.57 c -16.23,0 -31.23,6.47 -43.47,17.4 a 26.72,26.72 0 0 0 -4.55,-8.54 c -8,-10 -21.1,-10 -29.15,0 a 25.37,25.37 0 0 0 -2,2.86 c -17.23,-36.23 -49.03,-60.47 -85.4,-60.47 a 81.07,81.07 0 0 0 -21.16,2.83 C 237.74,51.339987 196.84,6.7299873 147.52,6.7299873 h -2.43 c -49.32,0 -90.23,44.6099997 -98,103.1000027 a 80.84,80.84 0 0 0 -47.09,1.39 v 261.89 h 912.73 v -263.88 a 81.47,81.47 0 0 0 -18.98,-2.23 z" opacity=".4"/>
 										<path fill="#1d1551" d="M -5,249.3942 c 0,0 446.31735,-280.935231 922.73,-0.12517 V 384.16 H -5 Z"/>
 									</g>
-									<g opacity="0.5" class="stars" fill="#ffffff">
+									<g opacity="0.5" class="stars" fill="#ffffff" transform="translate(0,254)">
 										<circle class="star" cx="677.68"  cy="589.97" r="4.7" fill="#fff" opacity=".55"/>
 										<circle class="star" cx="526.68" cy="538.97" r="4.7"  fill="#fff" opacity=".55"/>
 										<circle class="star" cx="567.69" cy="62.34" r="6.83" opacity=".8"/>
@@ -1317,7 +1320,7 @@
 											<path fill="#9bf1ed" d="M521.51 439s.73 5.43-3.37 1.8-8.9-18.32-24.34-28.79c0-.01 22.27 12.46 27.71 26.99z" opacity=".48"/>
 										</g>
 									</g>
-									<g fill="#181d26" opacity="0" class="sheep">
+									<g fill="#181d26" opacity="0" class="sheep" transform="translate(-27,-594.00039)">
 										<g class="body">
 											<path class="leg legthree" d="M454.94 808.31c1-2.2 5.6-4.57 6.72-1.26l.34-.05c1 3-1 19.45-6.15 17.06-3.85-1.84-2.25-12.72-.91-15.75z"/>
 											<path class="leg legfour" d="M442.47 804.79c2-2.16 4.49-1.76 6.21.29l.16.32a32.61 32.61 0 0 1-2.94 8.23c-.82 1.39-3.32 4.57-5.15 4.27-4.97-.81-.02-11.22 1.72-13.11z"/>
@@ -1426,6 +1429,13 @@
 					</div>
 					<div class="row">
 						<div class="col-outer col-12 col-md-12 col-lg-12">
+							<div class="facebook-mobile-object">
+								<div class="object-image aos-init" data-aos="fade-down" data-aos-duration="2000">
+									<div class="image">
+										<img src="images/facebook-object-image-2.png" alt="" title="" id="messge-icon"/>
+									</div>
+								</div>
+							</div>
 							<div class="facebook-object">
 								<div class="object-image aos-init left-driver">
 									<div class="image">
@@ -1478,9 +1488,9 @@
 													</div>
 												</div>
 												<div class="content-additional-detail">
-													<p style="text-align: right;">יסל קהטח'וואלמטחדום כליקדה  קלד דלןבד הדיקנה םטןם, לפדקד לןדם צהט, קןנסקאךך אדחפחסינג אלחמ צש<span id="dots">...</span><span id="more">קודחמנטוס קןהס גידגכידליכשבמהגדכיוקםט'קם</span></p>
+													<p style="text-align: right;">יסל קהטח'וואלמטחדום כליקדה  קלד דלןבד הדיקנה םטןם, לפדקד לןדם צהט, קןנסקאךך אדחפחסינג אלחמ צש<span class="dots">...</span><span class="more">קודחמנטוס קןהס גידגכידליכשבמהגדכיוקםט'קם</span></p>
 												</div>
-												<div class="btn btn-outline-default" id="myBtn" onClick="texthide()">See more</div>
+												<div class="btn btn-outline-default" class="textControlBtn" onClick="texthide()">Read more</div>
 												<img src="images/portfolio-image-3.jpg"/>
 												<div class="card">
 													<div class="btn-group" role="group" aria-label="Basic example" style="display: flex;">
@@ -1505,9 +1515,9 @@
 													</div>
 												</div>
 												<div class="content-additional-detail">
-													<p style="text-align: right;">יסל קהטח'וואלמטחדום כליקדה  קלד דלןבד הדיקנה םטןם, לפדקד לןדם צהט, קןנסקאךך אדחפחסינג אלחמ צש<span id="dots">...</span><span id="more">קודחמנטוס קןהס גידגכידליכשבמהגדכיוקםט'קם</span></p>
+													<p style="text-align: right;">יסל קהטח'וואלמטחדום כליקדה  קלד דלןבד הדיקנה םטןם, לפדקד לןדם צהט, קןנסקאךך אדחפחסינג אלחמ צש<span class="dots">...</span><span class="more">קודחמנטוס קןהס גידגכידליכשבמהגדכיוקםט'קם</span></p>
 												</div>
-												<div class="btn btn-outline-default" id="myBtn" onClick="texthide()">See more</div>
+												<div class="btn btn-outline-default" class="textControlBtn" onClick="texthide()">Read more</div>
 												<img src="images/madicine.jpg" alt="">
 												<div class="card">
 													<div class="btn-group" role="group" aria-label="Basic example" style="display: flex;">
@@ -1533,9 +1543,9 @@
 													</div>
 												</div>
 												<div class="content-additional-detail">
-													<p style="text-align: right;">יסל קהטח'וואלמטחדום כליקדה  קלד דלןבד הדיקנה םטןם, לפדקד לןדם צהט, קןנסקאךך אדחפחסינג אלחמ צש<span id="dots">...</span><span id="more">קודחמנטוס קןהס גידגכידליכשבמהגדכיוקםט'קם</span></p>
+													<p style="text-align: right;">יסל קהטח'וואלמטחדום כליקדה  קלד דלןבד הדיקנה םטןם, לפדקד לןדם צהט, קןנסקאךך אדחפחסינג אלחמ צש<span class="dots">...</span><span class="more">קודחמנטוס קןהס גידגכידליכשבמהגדכיוקםט'קם</span></p>
 												</div>
-												<div class="btn btn-outline-default" id="myBtn" onClick="texthide()">See more</div>
+												<div class="btn btn-outline-default" class="textControlBtn" onClick="texthide()">Read more</div>
 												<video width="100%" controls muted>
 													<source src="https://media.w3.org/2010/05/sintel/trailer_hd.mp4">
 												</video>
@@ -1563,9 +1573,9 @@
 													</div>
 												</div>
 												<div class="content-additional-detail">
-													<p style="text-align: right;">יסל קהטח'וואלמטחדום כליקדה  קלד דלןבד הדיקנה םטןם, לפדקד לןדם צהט, קןנסקאךך אדחפחסינג אלחמ צש<span id="dots">...</span><span id="more">קודחמנטוס קןהס גידגכידליכשבמהגדכיוקםט'קם</span></p>
+													<p style="text-align: right;">יסל קהטח'וואלמטחדום כליקדה  קלד דלןבד הדיקנה םטןם, לפדקד לןדם צהט, קןנסקאךך אדחפחסינג אלחמ צש<span class="dots">...</span><span class="more">קודחמנטוס קןהס גידגכידליכשבמהגדכיוקםט'קם</span></p>
 												</div>
-												<div class="btn btn-outline-default" id="myBtn" onClick="texthide()">See more</div>
+												<div class="btn btn-outline-default" class="textControlBtn" onClick="texthide()">Read more</div>
 												<img src="images/portfolio-image-4.jpg" alt="">
 												<div class="card">
 													<div class="btn-group" role="group" aria-label="Basic example" style="display: flex;">
@@ -1591,9 +1601,9 @@
 													</div>
 												</div>
 												<div class="content-additional-detail">
-													<p style="text-align: right;">יסל קהטח'וואלמטחדום כליקדה  קלד דלןבד הדיקנה םטןם, לפדקד לןדם צהט, קןנסקאךך אדחפחסינג אלחמ צש<span id="dots">...</span><span id="more">קודחמנטוס קןהס גידגכידליכשבמהגדכיוקםט'קם</span></p>
+													<p style="text-align: right;">יסל קהטח'וואלמטחדום כליקדה  קלד דלןבד הדיקנה םטןם, לפדקד לןדם צהט, קןנסקאךך אדחפחסינג אלחמ צש<span class="dots">...</span><span class="more">קודחמנטוס קןהס גידגכידליכשבמהגדכיוקםט'קם</span></p>
 												</div>
-												<div class="btn btn-outline-default" id="myBtn" onClick="texthide()">See more</div>
+												<div class="btn btn-outline-default" class="textControlBtn" onClick="texthide()">Read more</div>
 												<img src="images/dirty-shoes.jpg" alt="">
 												<div class="card">
 													<div class="btn-group" role="group" aria-label="Basic example" style="display: flex;">
@@ -1619,9 +1629,9 @@
 													</div>
 												</div>
 												<div class="content-additional-detail">
-													<p style="text-align: right;">יסל קהטח'וואלמטחדום כליקדה  קלד דלןבד הדיקנה םטןם, לפדקד לןדם צהט, קןנסקאךך אדחפחסינג אלחמ צש<span id="dots">...</span><span id="more">קודחמנטוס קןהס גידגכידליכשבמהגדכיוקםט'קם</span></p>
+													<p style="text-align: right;">יסל קהטח'וואלמטחדום כליקדה  קלד דלןבד הדיקנה םטןם, לפדקד לןדם צהט, קןנסקאךך אדחפחסינג אלחמ צש<span class="dots">...</span><span class="more">קודחמנטוס קןהס גידגכידליכשבמהגדכיוקםט'קם</span></p>
 												</div>
-												<div class="btn btn-outline-default" id="myBtn" onClick="texthide()">See more</div>
+												<div class="btn btn-outline-default" class="textControlBtn" onClick="texthide()">Read more</div>
 												<img src="images/distance-signal.jpg" alt="">
 												<div class="card">
 													<div class="btn-group" role="group" aria-label="Basic example" style="display: flex;">
@@ -1632,6 +1642,11 @@
 												</div>
 											</div>
 										</div>
+									</div>
+								</div>
+								<div class="preview-phone">
+									<div class="phone">
+										<img src="images/socmed-facebook-phone.png" alt="" title=""/>
 									</div>
 								</div>
 								<div class="preview-scroll">
