--- a/index.html
+++ b/index.html
@@ -1288,7 +1288,8 @@
 									<g class="bg" id="g26" transform="translate(0,266.89001)">
 										<path style="fill:#1c144e;stroke-width:1.15241003" d="m 913.37,946.10999 v -1213 H 0 v 1213"/>
 										<path style="opacity:0.4;fill:url(#gradientOne)" d="m 893.75,-60.00001 a 81,81 0 0 0 -21.15,2.83 c -7.78,-58.49001 -48.69,-103.10002 -98,-103.10002 h -2.44 c -49.32,0 -90.23,44.61001 -98,103.10002 a 81,81 0 0 0 -21.16,-2.83 c -36.38,0 -68.17,24.27 -85.48,60.47 a 25.37,25.37 0 0 0 -2,-2.86 c -8,-10 -21.1,-10 -29.15,0 a 26.53,26.53 0 0 0 -4.55,8.54 c -12.24,-10.93 -27.24,-17.4 -43.47,-17.4 a 61,61 0 0 0 -20.47,3.57 28.42,28.42 0 0 0 -6,-15.76 2.62,2.62 0 0 0 -4.22,0 28.48,28.48 0 0 0 -5.94,15.76 61,61 0 0 0 -20.47,-3.57 c -16.23,0 -31.23,6.47 -43.47,17.4 a 26.72,26.72 0 0 0 -4.55,-8.54 c -8,-10 -21.1,-10 -29.15,0 a 25.37,25.37 0 0 0 -2,2.86 c -17.23,-36.23 -49.03,-60.47 -85.4,-60.47 a 81.07,81.07 0 0 0 -21.16,2.83 c -7.78,-58.49001 -48.68,-103.10001 -98,-103.10001 h -2.43 c -49.32,0 -90.23,44.61 -98,103.10001 a 80.84,80.84 0 0 0 -47.09,1.39 v 261.89 h 912.73 v -263.88 a 81.47,81.47 0 0 0 -18.98,-2.23 z"/>
-										<path style="fill:#1d1551" d="m 0,66.49999 c 0,0 441.79,-224.43 913.37,-0.1 v 107.76 H 0 Z"/>
+										<path style="fill:#1c144e" d="m 0,66.49999 c 0,0 441.79,-224.43 913.37,-0.1 v 107.76 H 0 Z"/>
+										<path style="fill:#1c144e" d="m 0,-106.00598 c 0,0 484.83217,693.83613 917.27827,-5.52631 L 914.01005,66.39999 0,66.49999 Z"/>
 									</g>
 									<g class="stars" transform="translate(0,500.00002)" style="opacity:0.5;fill:#ffffff">
 										<circle class="star" cx="677.67999" cy="589.96997" r="4.6999998" style="opacity:0.5286;fill:#ffffff"/>
